@@ -1,3 +1,9 @@
+2008-05-23 Jim Garlick <garlick@llnl.gov>
+
+	* autoconf.ac, src/powerman.c : Use HAVE_GENDERS_H for <genders.h>.
+
+	* autoconf.ac, src/wrappers.c : Use HAVE_PTY_H for <pty.h>.
+
 2008-05-22 Jim Garlick <garlick@llnl.gov>
 
 	* parse_tab.y, parse_lex.l, Makefile.am : Use default automake
